first final commit

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 </li>
             </ul>
             <button class="btn btn__show-modal navigation-bar__btn">Open Account</button>
+            <div class="navigation-bar__menu-icon"></div>
         </nav>
         <div class="header__content">
             <h1 class="header__main-title">When
